--- a/BingWallpaper/BingWallpaper.csproj
+++ b/BingWallpaper/BingWallpaper.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
     <ItemGroup>
